src/test/deca/context/invalid/tests/CurrentClassNotSubClassSelection2.deca
// Description:
//       Teste de selection d'un Field protected .
// 
// Resultats: 
//      Ligne 17:La classe B doit être un sous-classes de A où est défini le champs x 
//	et la A doit être doit être un sous classe de B
// 
// Historique:
//      cree le 21/01/2023

class A{
  protected int x;
}

class B extends A{
    int getX(A a){
    	return a.x;
    }
}

  
  
